--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
        <a href="#" class="breadcrumbs__link"> MEN</a> 
         <a href="#" class="breadcrumbs__link breadcrumbs__link_site"> NEW ARRIVALS</a>
         <a href="#" class="breadcrumbs__link">BACK</a>
+        <a href="https://podu666.github.io/MyWorks-Site/" class="breadcrumbs__link">BACK</a>
+        <a href="https://podu666.github.io/Paralax/" class="breadcrumbs__link">PARALAX</a>
     </nav>
 </div>
 
@@ -189,5 +191,6 @@ Details
 </body>
 
 </html>
+
 
 
