--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Enfants riches déprimés</title>
+    <title>ENFANTS RICHES DÉPRIMÉS</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -20,10 +20,10 @@
 
     <nav class="nav">
         <ul>
-            <li><a href="">Your Profile</a></li>
-            <li><a href="">Settings</a></li>
-            <li><a href="">VK/TG</a></li>
-            <li><a href="">Basket</a></li>
+            <li><a href="#">Your Profile</a></li>
+            <li><a href="#">Settings</a></li>
+            <li><a href="#">VK/TG</a></li>
+            <li><a href="#">Basket</a></li>
         </ul>
     </nav>
 </div>
@@ -50,9 +50,10 @@
 Category
     </summary>
     <div class="filter__link-box">
-        <a href="#" class="filter__link">T-Shirts</a>
-    <a href="#" class="filter__link">Shoes</a>
-    <a href="#" class="filter__link">Jeans</a>
+        <a href="index.html" class="filter__link">T-Shirts</a>
+    <a href="shoes.html" class="filter__link">Shoes</a>
+    <a href="jeans.html" class="filter__link">Jeans</a>
+    <a href="jacket.html" class="filter__link">Jacket</a>
     </div>
 </details>
 <details class="filter__item">
@@ -190,7 +191,5 @@ Details
 </body>
 
 </html>
-
-
 
 
