--- a/shoes.html
+++ b/shoes.html
@@ -31,12 +31,12 @@
 
 <div class="top-head center">
     <h2 class="top-head__heading">NEW ARRIVALS</h2>
-    <nav class="breadcrumbs">
-        <a href="#" class="breadcrumbs__link">HOME</a>
-       <a href="#" class="breadcrumbs__link"> MEN</a> 
-        <a href="#" class="breadcrumbs__link breadcrumbs__link_site"> NEW ARRIVALS</a>
-        <a href="https://podu666.github.io/MyWorks-Site/" class="breadcrumbs__link">BACK</a>
-        <a href="https://podu666.github.io/Paralax/" class="breadcrumbs__link">PARALAX</a>
+<nav class="breadcrumbs">
+        <ul class="breadcrumbs__ul">
+         <li class="breadcrumbs__li"><a href="#" class="breadcrumbs__link">HOME</a></li>
+         <li class="breadcrumbs__li"><a href="#" class="breadcrumbs__link"> MEN</a> </li>
+         <li class="breadcrumbs__li"><a href="#" class="breadcrumbs__link "> NEW ARRIVALS</a></li>
+        </ul>
     </nav>
 </div>
 
@@ -179,5 +179,6 @@ Details
 </body>
 
 </html>
+
 
 
